# sql-admin

./: .env.example  .gitignore  Cargo.toml  README.md
crates/api-types/: Cargo.toml
crates/api-types/src/: lib.rs
crates/application/: Cargo.toml
crates/application/src/: app_state.rs  connection_pool_service.rs  dto.rs  lib.rs  utils.rs
crates/application/src/connection/: handler.rs
crates/application/src/data_edit/: handler.rs
crates/application/src/history/: handler.rs
crates/application/src/import/: handler.rs
crates/application/src/query/: handler.rs
crates/application/src/redb/: handler.rs
crates/backend/: Cargo.toml
crates/backend/src/: config.rs  crypto.rs  error.rs  id_generator.rs  logging.rs  main.rs  middleware.rs  state.rs
crates/backend/src/db/: queries.rs
crates/backend/src/handlers/: connections.rs  data_edit.rs  history.rs  import.rs  mod.rs  query.rs  schema.rs
crates/desktop/: Cargo.toml  tauri.conf.json
crates/desktop/capabilities/: default.json
crates/desktop/icons/: icon.icns
crates/desktop/src/: main.rs  state.rs
crates/desktop/src/commands/: connections.rs  data_edit.rs  history.rs  import.rs  mod.rs  query.rs  redb_browser.rs  schema.rs
crates/domain/: Cargo.toml
crates/domain/src/: id.rs  lib.rs
crates/domain/src/connection/: aggregate.rs  mod.rs  repository.rs  value_objects.rs
crates/domain/src/history/: aggregate.rs  mod.rs  repository.rs
crates/domain/src/query/: value_objects.rs
crates/domain/src/redb/: value_objects.rs
crates/domain/src/shared/: application_error.rs  crypto.rs  error.rs  event.rs  infrastructure_error.rs  mod.rs  pool.rs
crates/frontend/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  styles.css  tailwind.config.js
crates/frontend/public/: styles.css
crates/frontend/src/: app.rs  main.rs  tab_manager.rs
crates/frontend/src/api/: client.rs
crates/frontend/src/components/: code_snippets.rs  connection_form.rs  data_table.rs  header.rs  mod.rs  query_history.rs  redb_key_viewer.rs  redb_table_list.rs  sidebar.rs  sql_editor.rs  status_bar.rs  tabs.rs
crates/frontend/src/pages/: about.rs  appearance.rs  bookmarks.rs  connections.rs  database_tools.rs  home.rs  keyboard_shortcuts.rs  layout.rs  mod.rs  not_found.rs  query.rs  query_history.rs  quick_start.rs  redb_browser.rs  sql_utilities.rs  table_structure.rs
crates/frontend/src/state/: mod.rs
crates/frontend/src/utils/: mod.rs  sql_formatter.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/crypto/: aes_gcm.rs
crates/infrastructure/src/event_bus/: in_memory.rs  mod.rs
crates/infrastructure/src/event_bus/consumers/: history_recorder.rs  mod.rs  pool_invalidation.rs
crates/infrastructure/src/persistence/: mod.rs  sqlite_connection_repo.rs  sqlite_history_repo.rs
crates/infrastructure/src/persistence/migrations/: 001_init.sql  002_query_history.sql
crates/infrastructure/src/pool/: cached_pool.rs  executor.rs  factory.rs  mod.rs
crates/interfaces/: Cargo.toml
crates/interfaces/src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  middleware.rs  router.rs  state.rs
crates/interfaces/src/handlers/: connections.rs  data_edit.rs  history.rs  import.rs  mod.rs  query.rs  redb_browser.rs  schema.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
docs/: SQL美化规范.md  原型UI.md  本地调试命令.md  部署指南.md  需求文档.md  🦀 Rust 全栈 Web 开发架构选型指南（2024-2025）.md
scripts/: build-desktop.ps1  dev.ps1  start-backend.ps1  start-desktop.ps1  start-frontend.ps1
