[package]
name = "sql-admin-application"
version = "1.1.0"
edition = "2024"

[dependencies]
sql-admin-domain = { path = "../domain" }
sql-admin-api-types = { path = "../api-types" }
async-trait = "0.1.89"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }