[package]
name = "sql-admin-backend"
version = "1.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
dotenv = "0.15"
aes-gcm = "0.10"
base64 = "0.22"
getrandom = "0.4"
once_cell = "1.19"
sql-admin-shared = { path = "../shared", features = ["sqlx"] }
