[package]
name = "sql-admin-desktop"
version = "1.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
sql-admin-application = { path = "../application" }
sql-admin-domain = { path = "../domain" }
sql-admin-infrastructure = { path = "../infrastructure", features = ["keyring"] }
sql-admin-api-types = { path = "../api-types" }
tauri = { version = "2.11.5", features = [] }
tauri-plugin-shell = "2.3.5"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
redb = { workspace = true }
regex = { workspace = true }
