[package]
name = "sql-admin-domain"
version = "1.1.0"
edition = "2024"

[dependencies]
sql-admin-api-types = { path = "../api-types" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1.89"
uuid = { workspace = true }
tracing = { workspace = true }
getrandom = "0.4.3"