[package]
name = "sql-admin-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { workspace = true }
leptos_router = { workspace = true }
gloo-net = { workspace = true }
gloo-timers = { version = "0.2", features = ["futures"] }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen-futures = "0.4"
sql-admin-shared = { path = "../shared" }
regex = "1.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Clipboard", "Window", "Navigator", "HtmlInputElement", "FileList", "File"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
