[package]
name = "sql-admin-frontend"
version = "1.1.0"
edition = "2024"

[features]
default = []
tauri = []

[dependencies]
leptos = { workspace = true }
leptos_router = { workspace = true }
gloo-net = { workspace = true }
gloo-timers = { version = "0.4.0", features = ["futures"] }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen-futures = "0.4.76"
sql-admin-api-types = { path = "../api-types" }
regex = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.103", features = ["Clipboard", "Window", "Navigator", "HtmlInputElement", "FileList", "File"] }
js-sys = "0.3.103"
wasm-bindgen-futures = "0.4.76"
wasm-bindgen = "0.2.126"
