[package]
name = "sql-admin-infrastructure"
version = "1.1.0"
edition = "2024"

[dependencies]
sql-admin-domain = { path = "../domain" }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
aes-gcm = "0.10"
base64 = "0.22"
getrandom = "0.4"
redb = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }
serde_json = { workspace = true }