[package]
name = "sql-admin-interfaces"
version = "1.1.0"
edition = "2024"

[dependencies]
sql-admin-application = { path = "../application" }
sql-admin-domain = { path = "../domain" }
sql-admin-infrastructure = { path = "../infrastructure" }
sql-admin-api-types = { path = "../api-types" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
sqlx = { workspace = true }
dotenv = "0.15"
anyhow = { workspace = true }
redb = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[[bin]]
name = "sql-admin-interfaces"
path = "src/main.rs"