[package]
name = "sql-admin-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true, optional = true }

[features]
sqlx = ["dep:sqlx"]